--- a/core/templates/main/product-list.html
+++ b/core/templates/main/product-list.html
@@ -1,6 +1,6 @@
 {% extends "components/base.html" %}
 
 {% block content %}
-    <h2>Hello World</h2>
+    <h2>Product List</h2>
 
 {% endblock content %}
