--- a/core/templates/main/product-detail.html
+++ b/core/templates/main/product-detail.html
@@ -1,6 +1,28 @@
 {% extends "components/base.html" %}
-
 {% block content %}
-    <h2>Product Detail</h2>
+    <div class="row pt-5">
+
+        <div class="col-md-6">
+            <h1>{{ product.title }}</h1>
+            <p>{{ product.description }}</p>
+            <h2>${{ product.price }}</h2>
+            <p>Availability: In Stock</p>
+                
+            <a href="{{ url_for('checkout_page') }}?product_id={{ product.id }}" 
+                class="btn btn-primary">Proceed to Checkout
+            </a>
+        </div>
+
+    </div>
+
+    <hr>
+
+    <h3>Product Specifications</h3>
+    <ul>
+        <li>Spec 1: Value 1</li>
+        <li>Spec 2: Value 2</li>
+        <li>Spec 3: Value 3</li>
+        <!-- Add more specifications here -->
+    </ul>
 
 {% endblock content %}
