--- a/core/templates/main/product-list.html
+++ b/core/templates/main/product-list.html
@@ -1,17 +1,17 @@
 {% extends "components/base.html" %}
 
 {% block content %}
-    <h2>Product List {{ products }}</h2>
-    <div class="product-list row">
+    
+    <div class="product-list row pt-5">
 
         {% for product in products %}
-        <div class="card p-3" style="width: 18rem;">    
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
+          <div class="card p-3" style="width: 18rem;">    
+              <div class="card-body">
+                <h5 class="card-title">{{ product.title }}</h5>
+                <p class="card-text">{{ product.description }}</p>
+                <a href="#" class="btn btn-primary">See More</a>
+              </div>
+          </div>
         {% endfor %}
 
 {% endblock content %}
